--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -301,11 +301,11 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Complaint Registration</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/Dashboard">Dashboard</a></li>
-          <li class="breadcrumb-item active">Lodge Public Grivences</li>
+          <li class="breadcrumb-item"><a href="/LodgeComplaint">Lodge Complaint</a></li>
+          <li class="breadcrumb-item active">Complaint Registration</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
