--- a/views/user/lodgeComplaint.ejs
+++ b/views/user/lodgeComplaint.ejs
@@ -277,7 +277,7 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link" href="/UserComplaints">
+        <a class="nav-link" href="/LodgeComplaint">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Lodge Complaint</span>
         </a>
