--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -266,7 +266,7 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/UserComplaints">
+        <a class="nav-link collapsed" href="/LodgeComplaint">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Lodge Complaint</span>
         </a>
