same old commit

--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -293,7 +293,7 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/UserComplaints">
+        <a class="nav-link collapsed" href="/LodgeComplaint">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Lodge Complaint</span>
         </a>
