--- a/views/user/complaintRegistration.ejs
+++ b/views/user/complaintRegistration.ejs
@@ -320,7 +320,7 @@
             <h5 class="card-title">General Form Elements</h5>
 
             <!-- General Form Elements -->
-            <form action="/LodgeComplaint" class="needs-validation" method="post" novalidate>
+            <form action="/LodgeComplaint" class="needs-validation" method="post" enctype="multipart/form-data" novalidate>
               <input type="text" name="ministry" value="<%=ministry%>" hidden>
               <div class="row mb-3">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Complaint</label>
