--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/ministrylogo.png" class="img-fluid w-100" alt="">
+          <img src="assets/img/ministrylogo1.png" class="img-fluid w-100" alt="">
         </div>
       </div>
     </div>
