translate google done

--- a/views/admin/viewComplain.ejs
+++ b/views/admin/viewComplain.ejs
@@ -32,6 +32,10 @@
 
 <body>
 
+  <%- include('../common_scripts/analytics')%>
+  <%- include('../common_scripts/translate')%>
+  <!-- <%- include('../common_scripts/chatbot')%> -->
+
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
 
