--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -35,44 +35,9 @@
 
 <body>
 
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/6305f3ee54f06e12d8907185/1gb7k1oaj';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-  <!--End of Tawk.to Script-->
-
-  <!--Analytics-->
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBJdqvlabfIrwGFYcTpebuMTlasnTXsHgo",
-      authDomain: "sihcomplaintredressal.firebaseapp.com",
-      projectId: "sihcomplaintredressal",
-      storageBucket: "sihcomplaintredressal.appspot.com",
-      messagingSenderId: "1022317520311",
-      appId: "1:1022317520311:web:688cf1e61da2aa8dd17432",
-      measurementId: "G-JPJ1Z83SQX"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
+  <%- include('../common_scripts/analytics')%>
+  <%- include('../common_scripts/translate')%>
+  <%- include('../common_scripts/chatbot')%>
   
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
