--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,19 +39,11 @@
 
 <body>
 
-  <%- include('common_scripts/analytics')%>
-  <%- include('common_scripts/translate')%>
-  <%- include('common_scripts/chatbot')%>
-	
-	<script type="text/javascript" 
-	src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-	</script>
-
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="/" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
         <span class="d-block">Yukti</span>
       </a>
