--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,10 @@
 
 <body>
 
+  <%- include('common_scripts/analytics')%>
+  <%- include('common_scripts/translate')%>
+  <%- include('common_scripts/chatbot')%>
+
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -68,6 +72,7 @@
             </ul>
           </li> -->
           <!-- <li><a class="nav-link scrollto" href="#">Nodal Authority for Appeal</a></li> -->
+
           <li><a class="nav-link scrollto" href="#aboutus">About Us</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ's</a></li>
