--- a/views/auth/forgotPassword.ejs
+++ b/views/auth/forgotPassword.ejs
@@ -15,7 +15,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,79 +35,84 @@
 <body>
 
   <%- include('../common_scripts/analytics')%>
-  <%- include('../common_scripts/translate')%>
-  <%- include('../common_scripts/chatbot')%>
-  
-  <main>
-    <div class="container">
+    <div style="position: absolute; top:10px; right:10px;">
+      <%- include('../common_scripts/translate')%>
+    </div>
+    <%- include('../common_scripts/chatbot')%>
 
-      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+      <main>
         <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-              <div class="d-flex justify-content-center py-4">
-                <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
-                  <img src="assets/img/logo.png" alt="">
-                  <span class="d-block">Yukti</span>
-                </a>
-              </div><!-- End Logo -->
+          <section
+            class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-              <div class="card mb-3">
+                  <div class="d-flex justify-content-center py-4">
+                    <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
+                      <img src="assets/img/logo.png" alt="">
+                      <span class="d-block">Yukti</span>
+                    </a>
+                  </div><!-- End Logo -->
 
-                <div class="card-body">
+                  <div class="card mb-3">
 
-                  <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">Forget Password</h5>
-                    <p class="text-center small">Enter your Email</p>
-                  </div>
+                    <div class="card-body">
 
-                  <!-- changes made M-->   
-                  <form action="/ForgotPassword" method="post" class="row g-3 needs-validation" novalidate >
-
-                    <div class="col-12">
-                      <label for="yourUsername" class="form-label">Email</label>
-                      <div class="input-group has-validation">
-                        
-                        <!-- changes made M-->                  
-                        <input type="text" name="email" class="form-control" id="Email" required placeholder="Email"> 
-                        <div class="invalid-feedback">Please enter your Email.</div>
+                      <div class="pt-4 pb-2">
+                        <h5 class="card-title text-center pb-0 fs-4">Forget Password</h5>
+                        <p class="text-center small">Enter your Email</p>
                       </div>
-                    </div>
+
+                      <!-- changes made M-->
+                      <form action="/ForgotPassword" method="post" class="row g-3 needs-validation" novalidate>
+
+                        <div class="col-12">
+                          <label for="yourUsername" class="form-label">Email</label>
+                          <div class="input-group has-validation">
+
+                            <!-- changes made M-->
+                            <input type="text" name="email" class="form-control" id="Email" required
+                              placeholder="Email">
+                            <div class="invalid-feedback">Please enter your Email.</div>
+                          </div>
+                        </div>
 
 
-                    <div class="col-12">
-                      <button class="btn btn-primary w-100"type="submit" value="Send">Submit</button>
+                        <div class="col-12">
+                          <button class="btn btn-primary w-100" type="submit" value="Send">Submit</button>
+                        </div>
+
+                      </form>
+
                     </div>
-                   
-                  </form>
+                  </div>
 
                 </div>
               </div>
-
             </div>
-          </div>
+
+          </section>
+
         </div>
+      </main><!-- End #main -->
 
-      </section>
+      <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+          class="bi bi-arrow-up-short"></i></a>
 
-    </div>
-  </main><!-- End #main -->
+      <!-- Vendor JS Files -->
+      <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="assets/vendor/chart.js/chart.min.js"></script>
+      <script src="assets/vendor/echarts/echarts.min.js"></script>
+      <script src="assets/vendor/quill/quill.min.js"></script>
+      <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+      <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+      <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/chart.js/chart.min.js"></script>
-  <script src="assets/vendor/echarts/echarts.min.js"></script>
-  <script src="assets/vendor/quill/quill.min.js"></script>
-  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+      <!-- Template Main JS File -->
+      <script src="assets/js/main.js"></script>
 
 </body>
 
