--- a/views/common_scripts/chatbot.ejs
+++ b/views/common_scripts/chatbot.ejs
@@ -1,4 +1,9 @@
   <!--Start of Tawk.to Script-->
+  <style>
+    .tawk-branding{
+      display: none;
+    }
+  </style>
   <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
