--- a/views/user/complaintpage.ejs
+++ b/views/user/complaintpage.ejs
@@ -846,7 +846,7 @@
                 <section style="background-color: #ffffff;">
                     <div class="container py-5">
 
-                      <div class="row" style="overflow:scroll; height:400px">
+                      <div class="row" style="overflow-y:scroll; height:400px">
                         <div class="col-md-6 col-lg-7 col-xl-8">
 
                           <ul class="centerlist-unstyled">
