--- a/views/desk1/complaintpage.ejs
+++ b/views/desk1/complaintpage.ejs
@@ -821,14 +821,15 @@
                 </div>
 
                 <div class="row mb-3">
-                  <label class="col-sm-5 col-form-label"></label>
-                  <div class="col-sm-7">
+                  <!-- <label class="col-sm-5 col-form-label"></label> -->
+                  <div class="col-sm-3"></div>
+                  <div class="col-sm-4">
                     <a href="/approveComplaintDesk1?cid=<%=`${complaint.id}`%>"><button type="button" class="btn btn-primary">Approve</button></a>
                   </div>
-                </div>
-                <div class="row mb-3">
-                  <label class="col-sm-5 col-form-label"></label>
-                  <div class="col-sm-7">
+                <!-- </div>
+                <div class="row mb-3"> -->
+                  <!-- <label class="col-sm-5 col-form-label"></label> -->
+                  <div class="col-sm-5">
                     <a href="/rejectComplaint?cid=<%=`${complaint.id}`%>"><button type="button" class="btn btn-primary">Reject</button></a>
                   </div>
                 </div>
