mobile app page added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,17 +32,17 @@
 
 <body>
 
-<<<<<<< Updated upstream
+
   <%- include('common_scripts/analytics')%>
 
   <%- include('common_scripts/chatbot')%>
-=======
+
 
 	
 	<!-- <script type="text/javascript" 
 	src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
 	</script> -->
->>>>>>> Stashed changes
+
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
@@ -73,17 +73,17 @@
             </ul>
           </li> -->
           <!-- <li><a class="nav-link scrollto" href="#">Nodal Authority for Appeal</a></li> -->
-<<<<<<< Updated upstream
 
-=======
+
+
           <%- include('common_scripts/analytics')%>
       <%- include('common_scripts/translate')%>
       <%- include('common_scripts/chatbot')%>
->>>>>>> Stashed changes
-          <li><a class="nav-link scrollto" href="#aboutus">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#faq">FAQ's</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#">Mobile App</a></li> -->
+
+          <li><a class="nav-link scrollto" href="/#aboutus">About Us</a></li>
+          <li><a class="nav-link scrollto" href="/#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="/#faq">FAQ's</a></li>
+          <li><a class="nav-link scrollto" href="/Mobileapp">Mobile App</a></li>
           <li><a class="nav-link scrollto" href="/Signup">Signup</a></li>
           <li><a class="nav-link scrollto" href="/Login">Login</a></li>
           <li style="margin-left: 50px;"><%- include('common_scripts/translate')%></li>
